Update to eliminate strstream. Now compilable with gcc 4.3.3. Note that MHT now will encounter an assert instead of using an error system.

--- a/mht/makefile
+++ b/mht/makefile
@@ -22,18 +22,14 @@ C++FLAGS = -O
 build = $(C++) $(C++FLAGS) -o $@ 
 touch = touch $@
 
-libmht.a: libmht.a(apqueue.o) libmht.a(assign.o) \
-	  libmht.a(except.o) \
-	  libmht.a(links.o) libmht.a(list.o) \
-	  libmht.a(matrix.o) libmht.a(mem.o) libmht.a(mdlmht.o) \
-	  libmht.a(mht.o) libmht.a(mht_group.o) \
-	  libmht.a(mht_report.o) libmht.a(mht_track.o) \
-	  libmht.a(tree.o)
-	  $(C++) $(C++FLAGS) -c $(?:.o=.c)
+libmht.a: apqueue.o assign.o \
+	  except.o \
+	  links.o list.o \
+	  matrix.o mdlmht.o \
+	  mht.o mht_group.o \
+	  mht_report.o mht_track.o tree.o
 	  $(AR) $(ARFLAGS) libmht.a $?
-	  rm $?  
 	  @echo lib is now up-to-date
-.c.a:;
 
 apqueue_test: apqueue_test.o libmht.a
 	$(build) apqueue_test.o -L. -lmht -lm
@@ -41,58 +37,59 @@ apqueue_test: apqueue_test.o libmht.a
 assign_test: assign_test.o bassign.o libmht.a
 	$(build) assign_test.o bassign.o -L. -lmht -lm
 
-mdlmht.o: mdlmht.h mht.h except.h safeglobal.h list.h tree.h links.h vector.h
+
+mdlmht.o: mdlmht.h mht.h except.h safeglobal.h list.h tree.h links.h vector.h mdlmht.c
 	$(C++) -c $(C++FLAGS) mdlmht.c
 
-mht.o: mht.h safeglobal.h list.h tree.h links.h vector.h except.h
+mht.o: mht.h safeglobal.h list.h tree.h links.h vector.h except.h mht.c
 	$(C++) -c $(C++FLAGS) mht.c
 
 mht_group.o: mht.h pqueue.h apqueue.h safeglobal.h list.h tree.h \
-	links.h vector.h assign.h  except.h 
+	links.h vector.h assign.h  except.h mht_group.c
 	$(C++) -c $(C++FLAGS) mht_group.c
 
 mht_report.o: mht.h pqueue.h apqueue.h safeglobal.h list.h tree.h \
-                links.h vector.h assign.h  except.h
+                links.h vector.h assign.h  except.h mht_report.c
 	$(C++) -c $(C++FLAGS) mht_report.c
 
-mht_track.o: mht.h safeglobal.h list.h tree.h links.h vector.h except.h
+mht_track.o: mht.h safeglobal.h list.h tree.h links.h vector.h except.h mht_track.c
 	$(C++) -c $(C++FLAGS) mht_track.c
 
-apqueue_test.o: apqueue.h mem.h except.h
+apqueue_test.o: apqueue.h except.h apqueue_test.c
 	$(C++) -c $(C++FLAGS) apqueue_test.c
 
-apqueue.o: apqueue.h except.h safeglobal.h list.h assign.h vector.h
+apqueue.o: apqueue.h except.h safeglobal.h list.h assign.h vector.h apqueue.c
 	$(C++) -c $(C++FLAGS) apqueue.c
 
-assign_test.o: bassign.h mem.h except.h
+assign_test.o: bassign.h except.h assign_test.c
 	$(C++) -c $(C++FLAGS) assign_test.c
 
-assign.o: assign.h queue.h except.h vector.h
+assign.o: assign.h queue.h except.h vector.h assign.c
 	$(C++) -c $(C++FLAGS) assign.c
 
-bassign.o: bassign.h safeglobal.h vector.h assign.h except.h
+bassign.o: bassign.h safeglobal.h vector.h assign.h except.h bassign.c
 	$(C++) -c $(C++FLAGS) bassign.c
 
-links.o: links.h safeglobal.h list.h except.h 
+links.o: links.h safeglobal.h list.h except.h links.c
 	$(C++) -c $(C++FLAGS) links.c
 
-tree.o: tree.h except.h safeglobal.h list.h
+tree.o: tree.h except.h safeglobal.h list.h tree.c
 	$(C++) -c $(C++FLAGS) tree.c
 
-list.o: list.h except.h  safeglobal.h 
+list.o: list.h except.h  safeglobal.h list.c
 	$(C++) -c $(C++FLAGS) list.c
 
-matrix.o: matrix.h vector.h safeglobal.h except.h
+matrix.o: matrix.h vector.h safeglobal.h except.h matrix.c
 	$(C++) -c $(C++FLAGS) matrix.c
 
-pqueue.o: pqueue.h except.h safeglobal.h 
+pqueue.o: pqueue.h except.h safeglobal.h pqueue.c
 	$(C++) -c $(C++FLAGS) pqueue.c
 
-mem.o: mem.h except.h  safeglobal.h
-	$(C++) -c $(C++FLAGS) mem.c
+#mem.o: mem.h except.h  safeglobal.h mem.c
+#	$(C++) -c $(C++FLAGS) mem.c
 
-except.o: except.h  safeglobal.h 
+except.o: except.h  safeglobal.h except.c
 	$(C++) -c $(C++FLAGS) except.c
 
-normrand.o: normrand.h
+normrand.o: normrand.h normrand.c
 	$(C++) -c $(C++FLAGS) normrand.c
